@@ -1,0 +1,5 @@
+using sfcc.*;
+import "./Diagnosis.k";
+
+Diagnosis d = new Diagnosis("SoftwareAging", "OS");
+d.report("localhost");
